# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//developtools/profiler/build/config.gni")

libre2_path = rebase_path("//third_party/re2")
exec_script("install.sh", [ "$libre2_path" ])
ohos_shared_library("re2") {
  sources = [
    "re2-2021-11-01/re2/bitmap256.h",
    "re2-2021-11-01/re2/bitstate.cc",
    "re2-2021-11-01/re2/compile.cc",
    "re2-2021-11-01/re2/dfa.cc",
    "re2-2021-11-01/re2/filtered_re2.cc",
    "re2-2021-11-01/re2/mimics_pcre.cc",
    "re2-2021-11-01/re2/nfa.cc",
    "re2-2021-11-01/re2/onepass.cc",
    "re2-2021-11-01/re2/parse.cc",
    "re2-2021-11-01/re2/perl_groups.cc",
    "re2-2021-11-01/re2/pod_array.h",
    "re2-2021-11-01/re2/prefilter.cc",
    "re2-2021-11-01/re2/prefilter.h",
    "re2-2021-11-01/re2/prefilter_tree.cc",
    "re2-2021-11-01/re2/prefilter_tree.h",
    "re2-2021-11-01/re2/prog.cc",
    "re2-2021-11-01/re2/prog.h",
    "re2-2021-11-01/re2/re2.cc",
    "re2-2021-11-01/re2/regexp.cc",
    "re2-2021-11-01/re2/regexp.h",
    "re2-2021-11-01/re2/set.cc",
    "re2-2021-11-01/re2/simplify.cc",
    "re2-2021-11-01/re2/sparse_array.h",
    "re2-2021-11-01/re2/sparse_set.h",
    "re2-2021-11-01/re2/stringpiece.cc",
    "re2-2021-11-01/re2/tostring.cc",
    "re2-2021-11-01/re2/unicode_casefold.cc",
    "re2-2021-11-01/re2/unicode_casefold.h",
    "re2-2021-11-01/re2/unicode_groups.cc",
    "re2-2021-11-01/re2/unicode_groups.h",
    "re2-2021-11-01/re2/walker-inl.h",
    "re2-2021-11-01/util/logging.h",
    "re2-2021-11-01/util/mix.h",
    "re2-2021-11-01/util/mutex.h",
    "re2-2021-11-01/util/rune.cc",
    "re2-2021-11-01/util/strutil.cc",
    "re2-2021-11-01/util/strutil.h",
    "re2-2021-11-01/util/utf.h",
    "re2-2021-11-01/util/util.h",
  ]
  include_dirs = [ "re2-2021-11-01" ]
  if (!is_asan && !is_debug) {
    version_script = "libre2.map"
  }

  # cflags = [ "-lpthread" ]
  # ldflags = [ "-pthread" ]
  # visibility = ["*"]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
  part_name = "${OHOS_PROFILER_PART_NAME}"
}
